Finalize project